[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "h1grep"
version = "0.1.0"
description = "grep disclosed HackerOne reports for recon and research"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "sonnycroco" }]
keywords = [
    "bug-bounty",
    "hackerone",
    "hacktivity",
    "recon",
    "security",
    "disclosed-reports",
    "graphql",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/sonnycroco/h1grep"
Issues = "https://github.com/sonnycroco/h1grep/issues"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
h1grep = "h1grep:main"

[tool.setuptools]
py-modules = ["h1grep"]
